# wvxEmojiExporter

./: LICENSE  README.md  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  utils.rs
